logs/cftw.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/cftw'...
Listing './lib/python3.5/site-packages/cftw/bases'...
Listing './lib/python3.5/site-packages/cftw/bases/templates'...
Listing './lib/python3.5/site-packages/cftw/bases/templates/bases'...
Listing './lib/python3.5/site-packages/cftw/bases/templates/bases/continuumio-anaconda3'...
Listing './lib/python3.5/site-packages/cftw/bases/templates/bases/continuumio-anaconda3/analysis'...
Listing './lib/python3.5/site-packages/cftw/bases/templates/bases/continuumio-anaconda3/analysis/helpers'...
Compiling './lib/python3.5/site-packages/cftw/bases/templates/bases/continuumio-anaconda3/analysis/metrics.py'...
***   File "./lib/python3.5/site-packages/cftw/bases/templates/bases/continuumio-anaconda3/analysis/metrics.py", line 51
    bot.info('KS metric %s %s' %(ks ks < 0.09))
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cftw/bases/templates/bases/continuumio-anaconda3/analysis/tests'...
Listing './lib/python3.5/site-packages/cftw/bases/templates/bases/continuumio-anaconda3/data'...
Listing './lib/python3.5/site-packages/cftw/bases/templates/bases/continuumio-anaconda3/data/input'...
Listing './lib/python3.5/site-packages/cftw/bases/templates/bases/continuumio-anaconda3/data/mnt'...
Listing './lib/python3.5/site-packages/cftw/bases/templates/bases/continuumio-anaconda3/img'...
Listing './lib/python3.5/site-packages/cftw/bases/templates/bases/ubuntu16.04-python2'...
Listing './lib/python3.5/site-packages/cftw/bases/templates/bases/ubuntu16.04-python2/analysis'...
Listing './lib/python3.5/site-packages/cftw/bases/templates/bases/ubuntu16.04-python2/analysis/helpers'...
Compiling './lib/python3.5/site-packages/cftw/bases/templates/bases/ubuntu16.04-python2/analysis/metrics.py'...
***   File "./lib/python3.5/site-packages/cftw/bases/templates/bases/ubuntu16.04-python2/analysis/metrics.py", line 51
    bot.info('KS metric %s %s' %(ks ks < 0.09))
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cftw/bases/templates/bases/ubuntu16.04-python2/analysis/tests'...
Listing './lib/python3.5/site-packages/cftw/bases/templates/bases/ubuntu16.04-python2/data'...
Listing './lib/python3.5/site-packages/cftw/bases/templates/bases/ubuntu16.04-python2/data/input'...
Listing './lib/python3.5/site-packages/cftw/bases/templates/bases/ubuntu16.04-python2/data/mnt'...
Listing './lib/python3.5/site-packages/cftw/bases/templates/bases/ubuntu16.04-python2/img'...
Listing './lib/python3.5/site-packages/cftw/bases/templates/results'...
Listing './lib/python3.5/site-packages/cftw/bases/templates/results/leaderboard'...
Listing './lib/python3.5/site-packages/cftw/bases/templates/results/leaderboard/css'...
Listing './lib/python3.5/site-packages/cftw/bases/templates/results/leaderboard/images'...
Listing './lib/python3.5/site-packages/cftw/bases/templates/results/leaderboard/js'...
Listing './lib/python3.5/site-packages/cftw-0.0.2.egg-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/retrying-1.3.3.egg-info'...
Listing './lib/python3.5/site-packages/selenium'...
Listing './lib/python3.5/site-packages/selenium/common'...
Listing './lib/python3.5/site-packages/selenium/webdriver'...
Listing './lib/python3.5/site-packages/selenium/webdriver/android'...
Listing './lib/python3.5/site-packages/selenium/webdriver/blackberry'...
Listing './lib/python3.5/site-packages/selenium/webdriver/chrome'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common/actions'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common/html5'...
Listing './lib/python3.5/site-packages/selenium/webdriver/edge'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox/amd64'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox/x86'...
Listing './lib/python3.5/site-packages/selenium/webdriver/ie'...
Listing './lib/python3.5/site-packages/selenium/webdriver/opera'...
Listing './lib/python3.5/site-packages/selenium/webdriver/phantomjs'...
Listing './lib/python3.5/site-packages/selenium/webdriver/remote'...
Listing './lib/python3.5/site-packages/selenium/webdriver/safari'...
Listing './lib/python3.5/site-packages/selenium/webdriver/support'...
Listing './lib/python3.5/site-packages/selenium/webdriver/webkitgtk'...
Listing './lib/python3.5/site-packages/selenium-3.8.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/validator'...
Listing './lib/python3.5/site-packages/validator.py-1.2.5.dist-info'...
Listing './selenium'...
Listing './selenium/webdriver'...
Listing './selenium/webdriver/firefox'...
Listing './selenium/webdriver/firefox/amd64'...
Listing './selenium/webdriver/firefox/x86'...
Listing './selenium/webdriver/remote'...
Listing './share'...
Listing './share/python-wheels'...
